--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,9 @@
 ---
 - name: restart monit
-  service: name=monit state=restarted
+  command: /etc/init.d/monit restart
+##
+# service module fails on updated trusty
+# https://github.com/ansible/ansible/issues/19030
+##
+# service: name=monit state=restarted
+####
