偶尔遇到gather_timeout的问题，已合理回避

--- a/tasks/monitors.yml
+++ b/tasks/monitors.yml
@@ -23,6 +23,7 @@
 
 - name: monitors - Reload facts
   setup:
+    gather_subset: min
     filter: "ansible_local"
   when: monit_write_facts.changed
 
