--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -2,12 +2,13 @@
 - name: restart monit
   shell: |
     if [ -e /etc/init.d/monit ]; then
+      monit reload
       /etc/init.d/monit restart
     elif [ -e /usr/lib/systemd/system/monit.service ]; then
       systemctl enable monit.service
       systemctl restart monit.service
     else
-      pkill monit; sleep 2 && /usr/bin/monit
+      pkill monit; sleep 2 && /usr/local/bin/monit
     fi
 ##
 # service module fails on updated trusty
