--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -1,9 +1,9 @@
 ---
 - include_vars: debian.yml
-  when:  ansible_os_family == "Debian"
+  when: ansible_os_family == "Debian"
 
 - include_vars: redhat.yml
-  when: ansible_os_family == "RedHat"
+  when: ansible_os_family == "RedHat" or ansible_os_family == "Sangoma"
 
 - name: create includes folder
   file: path={{ monit_includes }} state=directory mode=0600
