--- a/tasks/debian/pkg.yml
+++ b/tasks/debian/pkg.yml
@@ -1,5 +1,32 @@
 ---
-- name: pkg - Install package
+- name: pkg - Install package (>= 14.04)
   apt:
     deb: "http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/5.26.0-1~ppa-genscript-ubuntu2/monit_5.26.0-1~ppa-genscript-ubuntu2_amd64.deb"
     state: present
+  when: ansible_facts['distribution_version'] is version('14.04', '>=')
+
+- name: pkg - Install package (< 14.04)
+  block:
+    - package:
+        name: monit
+        state: absent
+    - file:
+        path: "/opt/monit/"
+        state: directory
+    - unarchive:
+        src: "http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/monit-5.26.0-linux-x64.tar.gz"
+        dest: "/opt/monit/"
+        remote_src: yes
+    - get_url:
+        url: "http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/monit_build_in_1204"
+        dest: "/opt/monit/monit-5.26.0/bin/monit"
+        mode: 0755
+    - file:
+        src: "/opt/monit/monit-5.26.0/bin/monit"
+        dest: "/usr/local/bin/monit"
+        state: link
+    - file:
+        src: "/etc/monit/monitrc"
+        dest: "/usr/local/etc/monitrc"
+        state: link
+  when: ansible_facts['distribution_version'] is version('14.04', '<')
