--- a/tasks/monitors.yml
+++ b/tasks/monitors.yml
@@ -27,15 +27,18 @@
     filter: "ansible_local"
   when: monit_write_facts.changed
 
-- name: monitors - List configured monitors
+- name: monitors - availabled monitors
   command: ls -1 {{ monit_includes }}
   register: monit_services_present
   changed_when: false
+
+- name: monitors - enabled monitors
+  set_fact:
+    monit_services_enabled: "{{ monit_services | map(attribute='name') | list + ['mail', 'webinterface'] }}"
 
 - name: monitors - Remove unused monitors
   file:
     path: "{{ monit_includes }}/{{ item }}"
     state: absent
-  with_items: "{{ monit_services_present.stdout_lines | default([]) }}"
-  when: monit_service_delete_unlisted and item|basename not in ansible_local.monit.monit_configured_services
+  with_items: "{{ monit_services_present.stdout_lines | default([]) | difference(monit_services_enabled) }}"
   notify: restart monit
