--- a/tasks/redhat/pkg.yml
+++ b/tasks/redhat/pkg.yml
@@ -1,19 +1,21 @@
 ---
 #   name="https://repo.aerisnetwork.com/stable/centos/6/x86_64/monit-5.26.0-1.el6.x86_64.rpm"
 - name: pkg - Install package
+  tags: [ install ]
   yum: >
     name="http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/monit-5.26.0-1.el6.x86_64.rpm"
     state=present
   when:
-    - ansible_facts['distribution'] == "CentOS"
+    - ansible_facts['distribution'] in [ "CentOS", 'Redhat' ]
     - ansible_facts['distribution_major_version'] == "6"
 
 #   name="https://repo.aerisnetwork.com/stable/centos/7/x86_64/monit-5.26.0-1.el7.x86_64.rpm"
 - name: pkg - Install package
+  tags: [ install ]
   yum: >
     name="http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/monit-5.26.0-1.el7.x86_64.rpm"
     state=present
   when:
-    - ansible_facts['distribution'] == "CentOS"
+    - ansible_facts['distribution'] in [ "CentOS", 'Redhat' ]
     - ansible_facts['distribution_major_version'] == "7"
 
