--- a/tasks/debian/pkg.yml
+++ b/tasks/debian/pkg.yml
@@ -1,9 +1,16 @@
 ---
+- name: pkg - Install package (>= 20.04)
+  apt:
+    name: monit
+    state: present
+  when: ansible_facts['distribution_version'] is version('20.04', '>=')
+
 - name: pkg - Install package (>= 14.04)
   apt:
     deb: "http://nexus.genscript.com/repository/it/ppa.genscript.com/monit/5.26.0-1~ppa-genscript-ubuntu2/monit_5.26.0-1~ppa-genscript-ubuntu2_amd64.deb"
     state: present
-  when: ansible_facts['distribution_version'] is version('14.04', '>=')
+  when: ( ansible_facts['distribution_version'] is version('14.04', '>=') and
+          ansible_facts['distribution_version'] is version('20.04', '<') )
 
 - name: pkg - Install package (< 14.04)
   block:
